[change]:dashboard finalized

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,7 +4,7 @@
 @tailwind components;
 
 html {
-  font-family: "Rubik", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 body {
   @apply bg-white-500;
